<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="395dp"
            android:layout_height="361dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="322dp"
                android:layout_height="60dp"
                android:layout_gravity="center|top"
                android:fontFamily="sans-serif-black"
                android:text="Введите пароль"
                android:textAlignment="center"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="225dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/pin_placeholder_empty" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/pin_placeholder_empty" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/pin_placeholder_empty" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/pin_placeholder_empty" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/pin_placeholder_empty" />

                <View
                    android:id="@+id/view6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/pin_placeholder_empty" />
            </LinearLayout>

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="putNumb"
                    android:text="@string/k1"
                    app:layout_column="0"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="putNumb"
                    android:text="@string/k2"
                    app:layout_column="1"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="putNumb"
                    android:text="@string/k3"
                    app:layout_column="2"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="putNumb"
                    android:text="@string/k4"
                    app:layout_column="0"
                    app:layout_row="1" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="putNumb"
                    android:text="@string/k5"
                    app:layout_column="1"
                    app:layout_row="1" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="putNumb"
                    android:text="@string/k6"
                    app:layout_column="2"
                    app:layout_row="1" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="putNumb"
                    android:text="@string/k7"
                    app:layout_column="0"
                    app:layout_row="2" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="putNumb"
                    android:text="@string/k8"
                    app:layout_column="1"
                    app:layout_row="2" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="putNumb"
                    android:text="@string/k9"
                    app:layout_column="2"
                    app:layout_row="2" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="putNumb"
                    android:text="@string/k0"
                    app:layout_column="1"
                    app:layout_row="3" />

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CLEAR"
                    app:layout_column="2"
                    app:layout_row="3" />

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    app:layout_column="0"
                    app:layout_row="3" />
            </androidx.gridlayout.widget.GridLayout>

            <Button
                android:id="@+id/btn_createNewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Забыли пароль?" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>